<resources>
    <string name="app_name">Tourney</string>
    <string name="add_player">Add Player</string>
    <string name="choose_tournament">Choose Tournament</string>
    <string name="name_label">Name:</string>
    <string name="score_label">Score:</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="setup">Setup New Tournament</string>
    <string name="month">Month:</string>
    <string name="player">Choose a Player:</string>
    <string name="add">Add</string>
    <string name="participating">Participating Players:</string>
    <string name="chooseTour">Choose a Tournament:</string>
</resources>
