<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SetupNewTornament">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/tourneyForm">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/monthRow">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/month" android:layout_weight="0"
                    android:text="@string/month"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/monthEntery" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/playersRow">
            <TextView
                    android:text="@string/player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/playerLabel" android:layout_weight="0"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/playerSpinner" android:layout_weight="1"
                    android:entries="@array/samplePlayers"/>
            <Button
                    android:text="@string/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/addPlayer" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/participantRow">
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:text="@string/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/submit" android:layout_weight="1"/>
            <Button
                    android:text="@string/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/cancel" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>