<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddPlayerActivity">
    <TableLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/nameRow">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/nameLabel"
                    android:text="@string/name_label"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/name"
                    android:inputType="text"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/scoreRow">
            <TextView
                    android:text="@string/score_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/scoreLabel"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/score"
                    android:inputType="number"
                    android:digits="0123456789"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/buttonRow">

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/submitBT"
                    android:text="@string/submit"/>
            <Button
                    android:text="@string/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/cancelBT"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/errorRow">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/error"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>